--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "limdu",
+  "name": "meet-limdu",
   "description": "A machine learning framework for Node.js. Supports multi-level classification and online learning.",
   "version": "0.5.0",
   "author": "Erel Segal-haLevi <erelsgl@gmail.com>",
