--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "brain": "*",
     "defaultdict": "*",
     "graph-paths": "latest",
-    "languagemodel": "latest"
+    "languagemodel": "latest",
+    "async": "0.9.0"
   },
   "devDependencies": {
     "mocha": ">=1.0.0",
