--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meet-limdu",
   "description": "A machine learning framework for Node.js. Supports multi-level classification and online learning.",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "author": "Erel Segal-haLevi <erelsgl@gmail.com>",
   "repository": {
     "type": "git",
@@ -12,12 +12,11 @@
     "sprintf": "*",
     "svm": "*",
     "temp": "*",
-    "execSync": "*",
     "brain": "*",
     "defaultdict": "*",
     "graph-paths": "latest",
     "languagemodel": "latest",
-    "async": "0.9.0"
+    "async": ""
   },
   "devDependencies": {
     "mocha": ">=1.0.0",
